# hf-prefix-caching

./: README.md  pyproject.toml
hf_prefix_caching/: __init__.py  prefix_cache.py  types.py
hf_prefix_caching/utils/: __init__.py  cache.py  get_frequent_prefixes.py  hashing.py
tests/: test_cache_correctness.py  test_cache_get.py  test_cache_update.py  test_get_freq_prefixes.py  test_with_mmlu.py
tests/utils/: prepare_mmlu_dataset.py
