[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-prefix-caching"
version = "0.1.0"
description = "A Python package for efficient prefix caching with HuggingFace models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yuchi Hsu", email = "yuchihsu@stanford.edu"}
]

dependencies = [
    "transformers",
    "torch",
    "numpy",
]

[tool.setuptools.packages.find] 