[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf_prefix_caching"
version = "0.0.1"
description = "A Python package for efficient prefix caching with HuggingFace models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yuchi Hsu", email = "yuchihsu@stanford.edu"}
]

dependencies = [
    "transformers",
    "torch",
    "numpy",
]

[project.urls]
Homepage="https://github.com/ba144220/hf-prefix-caching"
Issues="https://github.com/ba144220/hf-prefix-caching/issues"

[tool.setuptools.packages.find]
include = ["hf_prefix_caching*"]

[tool.setuptools.package-dir]
"" = "."